<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:launchMode="singleInstance"
               >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b2"
        android:id="@+id/b2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="tomain"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="rs1"
        android:id="@+id/rs1"

        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/b2"
        android:layout_marginTop="27dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="rs2"
        android:id="@+id/rs2"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="rs3"
        android:id="@+id/rs3"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignEnd="@+id/b2"/>

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chron"
        android:clickable="false"
        android:enabled="false"
        android:layout_marginTop="159dp"
        android:textSize="18dp"

        android:format="00:00"
        android:layout_below="@+id/rs1"
        android:layout_alignEnd="@+id/textView5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tt"
        android:id="@+id/tt"
        android:layout_above="@+id/b2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tt2"
        android:id="@+id/tt2"
        android:layout_alignTop="@+id/tt"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/it"
        android:id="@+id/it"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/rs1"/>

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chron2"
        android:clickable="false"
        android:enabled="false"
        android:textSize="38dp"
        android:format="00:00"
        android:layout_alignTop="@+id/chron"
        android:layout_toEndOf="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Tehnica:"
        android:id="@+id/textView"
        android:textSize="20dp"

        android:layout_above="@+id/chron"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="/"
        android:id="@+id/textView2"
        android:layout_above="@+id/chron"
        android:layout_toEndOf="@+id/rs1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="/"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/rs2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Circuitul"
        android:id="@+id/textView4"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="A trecut"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="A ramas"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView3"/>

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chron3"
        android:layout_below="@+id/chron2"
        android:layout_alignStart="@+id/rs2"
        android:format="00:00"/>

</RelativeLayout>